--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="keywords" content="query-A-Link" />
-    
+    <meta name="description" content="" />
   </head>
   <body>
     
