--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         background:#349;
       }
       ul{
-        weight:800px;
+        width:800px;
         height:1200px;
         background:#909;
+      }
+      ul li{
+        width:800px;
+        height:40px;
       }
     </style>
   </head>
