--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <body>
     <div class="FL-1-5-1">
       <ul>
-        <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
-        <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
+        <li><a href="https://cov-spectrum.org/explore/World/AllSamples/Past2M/variants?nextcladePangoLineage=HK.3*&aaMutations1=S%3AQ14H&nextcladePangoLineage1=FL.1.5.1*&analysisMode=CompareToBaseline" target="_blank">FL.1.5.1 with S:Q14H</a></li>
+        <li><a href="" target="_blank">FL.1.5.1 with S:Q14K</a></li>
         <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
         <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
         <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
