--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="https://cov-spectrum.org/explore/World/AllSamples/Past2M/variants?nextcladePangoLineage=HK.3*&aaMutations1=S%3AQ14R&nextcladePangoLineage1=FL.1.5.1*&analysisMode=CompareToBaseline&" target="_blank">FL.1.5.1 with S:Q14R</a></li>
         <li><a href="https://cov-spectrum.org/explore/World/AllSamples/Past2M/variants?nextcladePangoLineage=HK.3*&aaMutations1=S%3AF32L&nextcladePangoLineage1=FL.1.5.1*&analysisMode=CompareToBaseline&" target="_blank">FL.1.5.1 with S:F32L</a></li>
         <li><a href="https://cov-spectrum.org/explore/World/AllSamples/Past2M/variants?nextcladePangoLineage=HK.3*&aaMutations1=S%3AQ52H&nextcladePangoLineage1=FL.1.5.1*&analysisMode=CompareToBaseline&" target="_blank">FL.1.5.1 with S:Q52H</a></li>
-        <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
+        <li><a href="https://cov-spectrum.org/explore/World/AllSamples/Past2M/variants?nextcladePangoLineage=HK.3*&aaMutations1=S%3AQ52K&nextcladePangoLineage1=FL.1.5.1*&analysisMode=CompareToBaseline&" target="_blank">FL.1.5.1 with S:Q52K</a></li>
         <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
         <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
         <li><a href="" target="_blank">FL.1.5.1 with S:Q14H</a></li>
